changes for shared library builds.
This required moving Inliner.cpp from Transformas to Dialect to satisfy
dependences. Currently the inliner is registered in the dialect
constructor, so the dialect has a dependence on the inliner. TODO: check
if this interface registration can be eliminated or done another way.

--- a/flang/lib/Lower/CMakeLists.txt
+++ b/flang/lib/Lower/CMakeLists.txt
@@ -26,6 +26,7 @@ add_flang_library(FortranLower
   DEPENDS
   FIRDialect
   FIRSupport
+  FIRTransforms
   ${dialect_libs}
   omp_gen
   acc_gen
@@ -33,6 +34,7 @@ add_flang_library(FortranLower
   LINK_LIBS
   FIRDialect
   FIRSupport
+  FIRTransforms
   ${dialect_libs}
   FortranCommon
   FortranParser
