--- a/flang/lib/Optimizer/Support/CMakeLists.txt
+++ b/flang/lib/Optimizer/Support/CMakeLists.txt
@@ -11,4 +11,7 @@ add_flang_library(FIRSupport
 
   LINK_LIBS
   ${dialect_libs}
+  MLIROpenMPToLLVM
+  MLIRTargetLLVMIR
+  MLIRTargetLLVMIRModuleTranslation
 )
