--- a/flang/runtime/CMakeLists.txt
+++ b/flang/runtime/CMakeLists.txt
@@ -29,6 +29,7 @@ add_flang_library(FortranRuntime PARTIAL_SOURCES_INTENDED
   allocatable.cpp
   buffer.cpp
   clock.cpp
+  complex-reduction.c
   character.cpp
   connection.cpp
   derived.cpp
@@ -45,6 +46,7 @@ add_flang_library(FortranRuntime PARTIAL_SOURCES_INTENDED
   io-stmt.cpp
   main.cpp
   memory.cpp
+  reduction.cpp
   stat.cpp
   stop.cpp
   terminator.cpp
